[package]
name = "danilang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
base64 = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
